@@ -17,7 +17,7 @@ chdir 't/x11' || die 'Cd failed';
 
 # 1) Test reading and displaying an image
 #
-if ( defined($ENV{'DISPLAY'}) ) {
+if ( defined($ENV{'DISPLAY'}) && ($^O ne 'MSWin32') ) {
   $image=Image::Magick->new;
   $x=$image->ReadImage('congrats.miff');
   if( "$x" ) {
